add: user registration, login, authentication and logout

--- a/workmeuve/templates/workmeuve/index.html
+++ b/workmeuve/templates/workmeuve/index.html
@@ -7,4 +7,6 @@
 
 {% block content %}
 <p>Landing Page...</p>
+<span>Hello, {{request.user}} </span><br>
+<span><a href="{% url 'logout' %}">Logout</a></span>
 {% endblock %}
