--- a/workmeuve/templates/workmeuve/registration.html
+++ b/workmeuve/templates/workmeuve/registration.html
@@ -76,29 +76,30 @@
 				<div class="d-flex justify-content-center form_container">
 
 					<form method="POST" action="">
+                        {% csrf_token %}
 						<div class="input-group mb-3">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-							<input type="text" name="username">
+							{{ form.username }}
 						</div>
 						<div class="input-group mb-2">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
 							</div>
-							<input type="email" name="email">
+							{{ form.email }}
 						</div>
 						<div class="input-group mb-2">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-key"></i></span>
 							</div>
-							<input type="text" name="password1">
+							{{ form.password1 }}
 						</div>
 						<div class="input-group mb-2">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-key"></i></span>
 							</div>
-							<input type="text" name="password2">
+							{{ form.password2 }}
 						</div>
 
 				   		<div class="d-flex justify-content-center mt-3 login_container">
@@ -106,10 +107,12 @@
 				   		</div>
 					</form>
 				</div>
+
+				{{ form.errors }}
 		
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
-						Already have an account? <a href="{% url 'login' %}" class="ml-2">Login</a>
+						Already have an account? <a href="{% url 'loginPage' %}" class="ml-2">Login</a>
 					</div>
 				</div>
 			</div>
