--- a/workmeuve/templates/workmeuve/base.html
+++ b/workmeuve/templates/workmeuve/base.html
@@ -10,6 +10,32 @@
     </title>
     <!-- bootstrap css cdn link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofP+NRtDfe4LhD+6Qj98EYlIE9fiP5wfs" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="css/index.css">
+
+    <style>
+        body,
+		html {
+			margin: 0;
+			padding: 0;
+			height: 100%;
+			background: #7abecc !important;
+		}
+
+        .card {
+            cursor: pointer;
+            transition: transform 0.2s ease-in-out;
+        }
+
+        .col-md-4 a {
+            text-decoration: none;
+        }        
+
+        .card:hover {
+            transform: scale(1.05);
+        }
+    </style>
 </head>
 <body>
     <!-- block content -->
